<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="中獎號碼" />

        <TextView
            android:id="@+id/N_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N_1_1_2"
            android:gravity="center" />

        <TextView
            android:id="@+id/N_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N_2_1_2"
            android:gravity="center" />

        <TextView
            android:id="@+id/N_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N_3_1_2"
            android:gravity="center" />

        <TextView
            android:id="@+id/N_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N_4_1_2"
            android:gravity="center" />

        <TextView
            android:id="@+id/N_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N_5_1_2"
            android:gravity="center" />

        <EditText
            android:id="@+id/edt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:ems="10"
            android:gravity="center"
            android:hint="請輸入號碼"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="重新選擇月份" />

            <Button
                android:id="@+id/ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="中獎結果" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>